<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/http_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_http_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/http_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checkedButton="@id/get_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/get_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/get" />

        <RadioButton
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/post" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>