<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/history_menu_item"
        android:title="@string/history"
        android:icon="@drawable/baseline_history_24"
        app:showAsAction="always"
        />
</menu>